--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
 ---
 name: link-checker
-dependencies: [base >= 4.7 && < 5, HTTP]
+dependencies: [base >= 4.7 && < 5, HTTP, scalpel]
 library:
   source-dirs: src
 executables:
@@ -8,10 +8,10 @@ executables:
     main: Main.hs
     source-dirs: exe
     ghc-options: [-threaded, -rtsopts, -with-rtsopts=-N]
-    dependencies: [link-checker, hspec, HTTP]
+    dependencies: [link-checker, text, scalpel, hspec, HTTP]
 tests:
   link-checker-test:
     main: Spec.hs
     source-dirs: test
     ghc-options: [-threaded, -rtsopts, -with-rtsopts=-N]
-    dependencies: [link-checker, hspec, HTTP]
+    dependencies: [link-checker, text, scalpel, hspec, HTTP]
